--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -24,4 +24,6 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/BLTGammaM2015NodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTBLTM2015NodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTBLTM2015NodeKernel.C
   )
