--- a/reg_tests/test_files/ablNeutralEdgeAMS/ablNeutralEdgeAMS.yaml
+++ b/reg_tests/test_files/ablNeutralEdgeAMS/ablNeutralEdgeAMS.yaml
@@ -41,17 +41,16 @@ linear_solvers:
     bamg_interp_type: 6
     bamg_cycle_type: 1
     write_matrix_files: no
-    
-
 
 # Specify the different physics realms.  Here, we just have one for the fluid.
 realms:
 
-  # The fluid realm that uses a 75 m x 75 m x 500 km column of
-  #   an atmospheric RANS mesh.
+  # The fluid realm that uses the 75 m x 75 m x 3000m atmospheric RANS mesh.
   - name: fluidRealm
-    mesh: ../../mesh/ablNeutralEdgeRans.exo
+    mesh: ../../mesh/ablNeutralEdgeSST.exo
     use_edges: yes
+    check_for_missing_bcs: yes
+    support_inconsistent_multi_state_restart: yes
     automatic_decomposition_type: rcb
 
     # This defines the equations to be solved: momentum, pressure,
@@ -65,10 +64,11 @@ realms:
       # "linear_solvers" block.  All use the scalar solver, except pressure.
       solver_system_specification:
         velocity: solve_scalar
-        pressure: solve_cont
         turbulent_ke: solve_scalar
         specific_dissipation_rate: solve_scalar
+        pressure: solve_cont
         ndtw: solve_cont
+        time_averaged_model_split: solve_cont
 
       # This defines the equation systems, maximum number of inner iterations,
       # and scaled nonlinear residual tolerance.
@@ -81,7 +81,7 @@ realms:
         - LowMachEOM:
             name: myLowMach
             max_iterations: 1
-            convergence_tolerance: 1.0e-5
+            convergence_tolerance: 1e-8
 
         - ShearStressTransport:
             name: mySST 
@@ -90,7 +90,6 @@ realms:
 
     # Specify the properties of the fluid, in this case air.
     material_properties:
-
       target_name: [fluid_part]
 
       constant_specification:
@@ -103,7 +102,6 @@ realms:
           mass_fraction: 1.0
 
       specifications:
-
         # Density here was computed such that P_ref = rho_ref*(R/mw)*300K
         - name: density
           type: constant
@@ -124,10 +122,14 @@ realms:
           pressure: 0.0
           velocity: [0.0, 0.0, 0.0]
           turbulent_ke: 0.1
-          specific_dissipation_rate: 2300.0
+          specific_dissipation_rate: 1.0
+          average_velocity: [3.0, 0.0, 0.0]
+          average_tke_resolved: 0.0
+          average_dudx: 0.0
+          k_ratio: 1.0
+          avg_res_adequacy_parameter: 1.0
 
     boundary_conditions:
-
     - periodic_boundary_condition: bc_north_south
       target_name: [north, south]
       periodic_user_data:
@@ -138,26 +140,32 @@ realms:
       periodic_user_data:
         search_tolerance: 0.0001 
 
-    - symmetry_boundary_condition: bc_upper
+    - abltop_boundary_condition: bc_upper
       target_name: upper
+      abltop_user_data:
+        potential_flow_bc: false
+        normal_temperature_gradient: 0.0
       symmetry_user_data:
+        symmetry_type: "z_direction_strong"
 
     - wall_boundary_condition: bc_lower
       target_name: lower
       wall_user_data:
         velocity: [0,0,0]
+        #turbulent_ke: 0.0
         use_wall_function: no
         heat_flux: 0.0
         reference_temperature: 300.0
-        roughness_height: 0.1
+        roughness_height: 0.3
         gravity_vector_component: 3
         RANS_abl_bc: yes
-        reference_velocity: 6.6
-        reference_height: 90.0
+        reference_velocity: 17.5
+        reference_height: 2500.0
 
     solution_options:
       name: myOptions
-      turbulence_model: sst
+      turbulence_model: sst_ams
+      reset_AMS_averages_on_init: true
       projected_timescale_type: momentum_diag_inv
       interp_rhou_together_for_mdot: yes
 
@@ -166,7 +174,7 @@ realms:
       fix_pressure_at_node:
         value: 0.0
         node_lookup_type: spatial_location
-        location: [12.5, 37.5, 4.8]
+        location: [12.5, 37.5, 1.0]
         search_target_part: [fluid_part]
         search_method: stk_kdtree
 
@@ -178,6 +186,11 @@ realms:
 
         - alpha_upw:
             velocity: 1.0
+            turbulent_ke: 1.0
+            specific_dissipation_rate: 1.0
+
+        - alpha:
+            velocity: 0.0
             turbulent_ke: 1.0
             specific_dissipation_rate: 1.0
 
@@ -206,6 +219,7 @@ realms:
             pressure: element
             turbulent_ke: element
             specific_dissipation_rate: element
+            ndtw: element
 
         - turbulence_model_constants:
             kappa: 0.40
@@ -221,32 +235,63 @@ realms:
             sigmaKTwo: 1.0
             sigmaWOne: 0.5
             sigmaWTwo: 0.67
-            SDRWallFactor: 10.0 # for timestepping not turbulence model
+            SDRWallFactor: 0.625 # for timestepping not turbulence model
+            forcingFactor: 8.0 # for AMS
+            avgTimeScaleCoeff: 1.0 # for AMS
 
         - source_terms:
-            momentum: 
-              - body_force
+            momentum:
+              - EarthCoriolis 
+              - abl_forcing
 
-        - source_term_parameters:
-            momentum: [0.0003547, 0.0, 0.0]
+        - user_constants:
+            east_vector: [1.0, 0.0, 0.0]
+            north_vector: [0.0, 1.0, 0.0]
+            latitude: 51.343479
+            earth_angular_velocity: 7.2921159e-5
+            reference_velocity: 17.5
+            reference_height: 2500.0
+            roughness_height: 0.3
+            zero_forcing_below_ks: true
+            length_scale_limiter: yes
 
         - input_variables_from_file:
             velocity: velocity
 
     output:
-      output_data_base_name: rans_abl_neutral.e
+      output_data_base_name: ablNeutralEdgeAMS.e
       output_frequency: 10
-      output_nodse_set: no
+      output_node_set: no
       output_variables:
        - velocity
+       - average_velocity
        - pressure
+       - pressure_force
+       - tau_wall
        - turbulent_ke
        - specific_dissipation_rate
        - minimum_distance_to_wall
        - turbulent_viscosity
+       - k_ratio
+       - rans_time_scale
+       - average_mass_flow_rate
+       - average_tke_resolved
+       - avg_res_adequacy_parameter
+       - resolution_adequacy_parameter
+       - metric_tensor
+       - element_courant
+       - average_production
+       - average_dudx
+       - forcing_components
+       - sst_f_one_blending
+       - l_t
+       - gamma
 
    # Compute spatial averages of velocity and temperature at all height levels
-   # available on the ABL mesh. This is used for post-processing.
+   # available on the ABL mesh. This is used for post-processing as well as
+   # determining the ABL forcing necessary to drive the wind to a certain
+   # speed/direction at different heights. See `abl_forcing` section below for
+   # details of the driving wind forcing.
     boundary_layer_statistics:
       target_name: [ fluid_part ]
       stats_output_file: "abl_statistics.nc"
@@ -254,14 +299,32 @@ realms:
       output_frequency: 10
       time_hist_output_frequency: 2
 
+    abl_forcing:
+      output_format: "abl_%s_sources.dat"
+      momentum:
+        type: computed
+        relaxation_factor: 1.0
+        heights: [2500.0]
+        velocity_x:
+          - [0.0, 17.5]
+          - [1000000.0, 17.5]
+
+        velocity_y:
+          - [0.0, 0.0]
+          - [1000000.0, 0.0]
+
+        velocity_z:
+          - [0.0, 0.0]
+          - [1000000.0, 0.0]
+
 # This defines the time step size, count, etc.
 Time_Integrators:
   - StandardTimeIntegrator:
       name: ti_1
       start_time: 0.0
       termination_step_count: 10
-      time_step: 100.0
       time_stepping_type: fixed
+      time_step: .7
       time_step_count: 0
       second_order_accuracy: yes
 
