--- a/docs/source/theory/amsAbl_ransBelowKs.yaml
+++ b/docs/source/theory/amsAbl_ransBelowKs.yaml
@@ -4,4 +4,4 @@ realms:
       options:
         - user_constants:
           roughness_height: 0.3
-          zero_forcing_below_ks: true
+          rans_below_ks: true
