This PR adds 2 new parameters to hypre solver blocks.     1) write_preassembly_matrix_files: This parameter dumps the arrays        generated by the Nalu assembly algorithms (just prior to AddTo/SetValues and Assemble)     2) bamg_use_cusparse_sgemm: This parameter allows one to control        the sgemm algorithm used in BoomerAMG. Nvidia and AMD will require        different values for this parameter so we need to have it be flexible.

--- a/reg_tests/test_files/ablNeutralNGPHypre/ablNeutralNGPHypre.yaml
+++ b/reg_tests/test_files/ablNeutralNGPHypre/ablNeutralNGPHypre.yaml
@@ -21,6 +21,7 @@ linear_solvers:
     recompute_preconditioner_frequency: 100
     simple_hypre_matrix_assemble: no
     dump_hypre_matrix_stats: no
+    write_preassembly_matrix_files: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
@@ -40,6 +41,7 @@ linear_solvers:
     recompute_preconditioner_frequency: 100
     simple_hypre_matrix_assemble: no
     dump_hypre_matrix_stats: no
+    write_preassembly_matrix_files: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
@@ -59,6 +61,7 @@ linear_solvers:
     recompute_preconditioner_frequency: 100
     simple_hypre_matrix_assemble: no
     dump_hypre_matrix_stats: no
+    write_preassembly_matrix_files: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
