--- a/reg_tests/test_files/oversetRotCylNGPHypre/oversetRotCylNGPHypre.yaml
+++ b/reg_tests/test_files/oversetRotCylNGPHypre/oversetRotCylNGPHypre.yaml
@@ -19,6 +19,9 @@ linear_solvers:
     write_matrix_files: no
     simple_hypre_matrix_assemble: no
     dump_hypre_matrix_stats: no
+    recompute_preconditioner_frequency: 1
+    reuse_linear_system: yes
+    write_preassembly_matrix_files: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
@@ -36,6 +39,9 @@ linear_solvers:
     write_matrix_files: no
     simple_hypre_matrix_assemble: no
     dump_hypre_matrix_stats: no
+    recompute_preconditioner_frequency: 1
+    reuse_linear_system: yes
+    write_preassembly_matrix_files: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
