In the previous model, Hypre matrices and vectors were created only once. We attempted to reuse these data structures, in subsequent time steps or picard iters, by calling HYPRE_IJMatrixInitialize and then HYPRE_IJMatrixAssemble. However, recent nrel5mw sims have shown that certain MPI/GPU communication data structures, internal to Hypre, lose their validity between different assemble calls at different time steps. Nonetheless, HYPRE routines like SpMV try to use these data structures and seg fault.  These sims shows changes in the size of the matrices/vectors that needs new versions of these Hypre communicators. Ideally, recalling HYPRE_IJMatrixInitialize should rebuild these however I have not been able to make that work. The alternative is let the application delete and rebuild the HYPRE matrices and vectors every time Hypre Assembly is needed. This isn't that big an issue as these routines are cheap especially when using device memory pools. Essentially, I moved matrix/vector creation and initialization inside zeroSystem and eliminated finalizeSolver. This guarantees that we have clean internal Hypre data structures.

--- a/reg_tests/test_files/airfoilRANSEdgeNGPHypre.rst/airfoilRANSEdgeNGPHypre.rst.yaml
+++ b/reg_tests/test_files/airfoilRANSEdgeNGPHypre.rst/airfoilRANSEdgeNGPHypre.rst.yaml
@@ -10,6 +10,11 @@ Simulations:
     time_integrator: ti_1
     optimizer: opt1
 
+# Hypre memory and other configurations
+hypre_config:
+    memory_pool_mbs: 1500
+    use_cusparse_sgemm: no
+
 linear_solvers:
 
   - name: solve_mom
