--- a/reg_tests/test_files/nrel5MWactuatorLine/NRELOffshrBsline5MW_Onshore_ServoDyn.dat.in
+++ b/reg_tests/test_files/nrel5MWactuatorLine/NRELOffshrBsline5MW_Onshore_ServoDyn.dat.in
@@ -57,6 +57,22 @@ True          GenTiStp     - Method to stop the generator {T: timed using TimGen
      9999.9   TYawManS     - Time to start override yaw maneuver and end standard yaw control (s)
           2   YawManRat    - Yaw maneuver rate (in absolute value) (deg/s)
           0   NacYawF      - Final yaw angle for override yaw maneuvers (degrees)
+---------------------- AERODYNAMIC FLOW CONTROL --------------------------------
+          0   AfCmode      - Airfoil control mode {0: none, 1: cosine wave cycle, 4: user-defined from Simulink/Labview, 5: user-defined from Bladed-style DLL} (switch)
+          0   AfC_Mean     - Mean level for cosine cycling or steady value (-) [used only with AfCmode==1]
+          0   AfC_Amp      - Amplitude for for cosine cycling of flap signal (-) [used only with AfCmode==1]
+          0   AfC_Phase    - Phase relative to the blade azimuth (0 is vertical) for for cosine cycling of flap signal (deg) [used only with AfCmode==1]
+---------------------- STRUCTURAL CONTROL --------------------------------------
+0             NumBStC      - Number of blade structural controllers (integer)
+"unused"      BStCfiles    - Name of the files for blade structural controllers (quoted strings) [unused when NumBStC==0]
+0             NumNStC      - Number of nacelle structural controllers (integer)
+"unused"      NStCfiles    - Name of the files for nacelle structural controllers (quoted strings) [unused when NumNStC==0]
+0             NumTStC      - Number of tower structural controllers (integer)
+"unused"      TStCfiles    - Name of the files for tower structural controllers (quoted strings) [unused when NumTStC==0]
+0             NumSStC      - Number of substructure structural controllers (integer)
+"unused"      SStCfiles    - Name of the files for substructure structural controllers (quoted strings) [unused when NumSStC==0]
+---------------------- CABLE CONTROL -------------------------------------------
+          0   CCmode       - Cable control mode {0: none, 4: user-defined from Simulink/Labview, 5: user-defined from Bladed-style DLL} (switch)
 ---------------------- TUNED MASS DAMPER ---------------------------------------
 False         CompNTMD     - Compute nacelle tuned mass damper {true/false} (flag)
 "NRELOffshrBsline5MW_ServoDyn_TMD.dat"    NTMDfile     - Name of the file for nacelle tuned mass damper (quoted string) [unused when CompNTMD is false]
