--- a/reg_tests/test_files/nrel5MWactuatorLine/nrel5mw.fst.in
+++ b/reg_tests/test_files/nrel5MWactuatorLine/nrel5mw.fst.in
@@ -18,6 +18,17 @@ false         Echo            - Echo input data to <RootName>.ech (flag)
           0   CompSub         - Compute sub-structural dynamics (switch) {0=None; 1=SubDyn}
           0   CompMooring     - Compute mooring system (switch) {0=None; 1=MAP++; 2=FEAMooring; 3=MoorDyn; 4=OrcaFlex}
           0   CompIce         - Compute ice loads (switch) {0=None; 1=IceFloe; 2=IceDyn}
+          0   MHK             - MHK turbine type (switch) {0=Not an MHK turbine; 1=Fixed MHK turbine; 2=Floating MHK turbine}
+---------------------- ENVIRONMENTAL CONDITIONS --------------------------------
+    9.80665   Gravity         - Gravitational acceleration (m/s^2)
+      1.225   AirDens         - Air density (kg/m^3)
+          0   WtrDens         - Water density (kg/m^3)
+  1.464E-05   KinVisc         - Kinematic viscosity of working fluid (m^2/s)
+        335   SpdSound        - Speed of sound in working fluid (m/s)
+     103500   Patm            - Atmospheric pressure (Pa) [used only for an MHK turbine cavitation check]
+       1700   Pvap            - Vapour pressure of working fluid (Pa) [used only for an MHK turbine cavitation check]
+          0   WtrDpth         - Water depth (m)
+          0   MSL2SWL         - Offset between still-water level and mean sea level (m) [positive upward]
 ---------------------- INPUT FILES ---------------------------------------------
 "@CMAKE_CURRENT_BINARY_DIR@/5MW_Baseline/NRELOffshrBsline5MW_Onshore_ElastoDyn.dat"    EDFile          - Name of file containing ElastoDyn input parameters (quoted string)
 "@CMAKE_CURRENT_BINARY_DIR@/5MW_Baseline/NRELOffshrBsline5MW_BeamDyn.dat"    BDBldFile(1)    - Name of file containing BeamDyn input parameters for blade 1 (quoted string)
