Add subsampling spinnerlidar

--- a/reg_tests/test_files/ablUnstableEdge/ablUnstableEdge.yaml
+++ b/reg_tests/test_files/ablUnstableEdge/ablUnstableEdge.yaml
@@ -231,7 +231,6 @@ realms:
       search_method: stk_kdtree
       search_tolerance: 1.0e-3
       search_expansion_factor: 2.0
-
       lidar_specifications:
         from_target_part: [fluid_part]
         inner_prism_initial_theta: 90
@@ -240,13 +239,14 @@ realms:
         outer_prism_initial_theta: 90
         outer_prism_rotation_rate: 6.5
         outer_prism_azimuth: 15.2
-        scan_time: 2 #seconds
-        number_of_samples: 2
-        points_along_line: 1
+        scan_time: 2.0
+        number_of_samples: 984
+        points_along_line: 100
         center: [500,500,100]
-        beam_length: 1.0
+        beam_length: 200.0
         axis: [1,0,0]
         ground_direction: [0,0,1]
+        output: netcdf
 
 Time_Integrators:
   - StandardTimeIntegrator:
