--- a/src/wind_energy/CMakeLists.txt
+++ b/src/wind_energy/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/ABLForcingAlgorithm.C
   ${CMAKE_CURRENT_SOURCE_DIR}/BdyHeightAlgorithm.C
   ${CMAKE_CURRENT_SOURCE_DIR}/BdyLayerStatistics.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/LidarPatterns.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SyntheticLidar.C
   )
